CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(QBencode)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
FIND_PACKAGE(Qt5Core REQUIRED)

#ADD_SUBDIRECTORY(app bin)
ADD_SUBDIRECTORY(src lib)
ADD_SUBDIRECTORY(tests tests)

ENABLE_TESTING()
ADD_TEST(NAME unittest COMMAND ${PROJECT_BINARY_DIR}/tests/runtests.sh)

INSTALL(FILES LICENSE DESTINATION share/licenses)
