CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

INCLUDE_DIRECTORIES(BEFORE SYSTEM gtest)
INCLUDE_DIRECTORIES(BEFORE ../src)
INCLUDE_DIRECTORIES(BEFORE ../src/include)

# Source files
AUX_SOURCE_DIRECTORY(gtest GTEST_SRC)
SET(TEST_FILES
				test_qbencodeparser.cpp
)

# Build targets
ADD_EXECUTABLE(tests ${GTEST_SRC} ${TEST_FILES})
TARGET_LINK_LIBRARIES(tests QBencode)
TARGET_LINK_LIBRARIES(tests Qt5::Core)
TARGET_LINK_LIBRARIES(tests pthread)

# Install phase

# Copy test runner wrapper script to build directory
IF(UNIX)
	MESSAGE(STATUS "Install runtests.sh")
	FILE(COPY runtests.sh DESTINATION .
		 FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
		                  GROUP_READ GROUP_EXECUTE
						  WORLD_READ WORLD_EXECUTE)
ELSEIF(WIN32)
	MESSAGE(STATUS "Install runtests.bat")
	FILE(COPY runtests.bat DESTINATION .
		 FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
		                  GROUP_READ GROUP_EXECUTE
						  WORLD_READ WORLD_EXECUTE)
ENDIF(UNIX)

# Copy test data files
MESSAGE(STATUS "Install test data files")
FILE(COPY data/resume.dat DESTINATION data
	 FILE_PERMISSIONS OWNER_READ OWNER_WRITE
					  GROUP_READ
					  WORLD_READ)
